--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://irons163.github.io/go-ethereum-website/"
+baseURL = "https://irons163.github.io"
 languageCode = "en-us"
 title = "go-ethereum"
 theme = "hyde-hyde"
