--- a/config.toml
+++ b/config.toml
@@ -5,19 +5,25 @@ theme = "hyde-hyde"
 pygmentsStyle="autumn"
 pygmentsCodeFences=true
 [[menu.main]]
-    name = "Post"
-    identifier = "post"
-    weight = 30
+    name = "Posts"
+    identifier = "posts"
+    weight = 10
     url = "/post/"
 [[menu.main]]
     name = "Portfolio"
     identifier = "portfolio"
-    weight = 30
+    weight = 20
     url = "/portfolio/"
+[[menu.main]]
+    name = "About"
+    identifier = "about"
+    weight = 30
+    url = "/about/"
 [params.social]
     github = "irons163"
     facebook = "100000231660391"
     email = "irons163"
 [params]
     authorimage = "/aaa.jpg"
+    mainSections = ["post"]
     
