--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ pygmentsCodeFences=true
     licenseURL = "https://creativecommons.org/licenses/by-sa/4.0"
     showBuiltWith = true
     authorimage = "/aaa.jpg"
-    mainSections = ["posts"]
+    mainSections = ["post"]
     highlightjs = true
     highlight = false
     highlightjsstyle = "github"
